[gd_scene load_steps=12 format=3 uid="uid://dt0eer60l7i60"]

[ext_resource type="Script" path="res://scenes/Adversaire/Scripts/Adversaire.gd" id="1_0frx7"]
[ext_resource type="Script" path="res://scenes/Hit_Hurt_Box/HurtBox3D.gd" id="3_wh4qg"]
[ext_resource type="PackedScene" uid="uid://dqiin62cguslw" path="res://scenes/healthManager/health_manager.tscn" id="4_16u3y"]
[ext_resource type="PackedScene" uid="uid://wvkv80bf4xdy" path="res://scenes/Adversaire/FBX/Base_Skeletton_assassin.tscn" id="4_815c3"]
[ext_resource type="Script" path="res://scenes/Hit_Hurt_Box/HitBox3D.gd" id="5_l77nt"]
[ext_resource type="Script" path="res://Scripts/StatePattern/StateMachine.gd" id="6_hsl1g"]
[ext_resource type="Script" path="res://Scripts/StatePattern/Base_adversaire/Base_adversaire_IDLE.gd" id="7_jr0e8"]
[ext_resource type="Script" path="res://Scripts/StatePattern/Base_adversaire/Base_adversaire_CHASING.gd" id="8_h8gk5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3kvax"]
height = 1.0
radius = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d36gf"]
height = 1.0
radius = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y2dk3"]
height = 1.0
radius = 0.7

[node name="Dummy" type="CharacterBody3D" node_paths=PackedStringArray("dummy_skin")]
collision_layer = 2
script = ExtResource("1_0frx7")
max_speed = 3.0
steering_factor = 10.0
dummy_skin = NodePath("Base_Skelleton_ass_skin")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_3kvax")

[node name="HurtBox3D" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
script = ExtResource("3_wh4qg")
hurtbox_type = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_3kvax")

[node name="HealthManager" parent="." instance=ExtResource("4_16u3y")]
unique_name_in_owner = true
health = 3

[node name="Base_Skelleton_ass_skin" parent="." instance=ExtResource("4_815c3")]
transform = Transform3D(0.55, 0, 0, 0, 0.55, 0, 0, 0, 0.55, 0, 0, 0)

[node name="player_detection_area" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.55, 0, 0, 0, 0.55, 0, 0, 0, 0.55, 0, 0, 0)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_detection_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_d36gf")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="player_detection_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
radius = 5.0
height = 1.0
sides = 15

[node name="HitBox3D" type="Area3D" parent="."]
script = ExtResource("5_l77nt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_y2dk3")

[node name="StateManager" type="Node" parent="."]
script = ExtResource("6_hsl1g")
initial_state = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateManager"]
script = ExtResource("7_jr0e8")

[node name="CHASING" type="Node" parent="StateManager"]
script = ExtResource("8_h8gk5")

[connection signal="area_entered" from="player_detection_area" to="." method="_on_player_detection_area_area_entered"]
[connection signal="area_exited" from="player_detection_area" to="." method="_on_player_detection_area_area_exited"]
